fix image align

--- a/src/css/screen-adaptation.css
+++ b/src/css/screen-adaptation.css
@@ -209,9 +209,6 @@
   #footer {
     font-size: 0.8rem;
   }
-  .me-container {
-    margin: 0;
-  }
   h1,
   .profession-name {
     margin-left: 1.5rem;
