--- a/src/css/structure.css
+++ b/src/css/structure.css
@@ -118,10 +118,10 @@ div.btn:nth-child(2) {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
   height: 100%;
   margin-left: 2rem;
-}
+  margin-right: 2rem;
+}   
 
 .image-container {
   transform: rotate3d(0.5, -0.866, 0, 15deg) rotate(1deg);
@@ -134,7 +134,7 @@ div.btn:nth-child(2) {
     box-shadow 0.4s ease;
   justify-content: center;
   display: grid;
-  justify-items: center;
+  justify-items: right;
 }
 
 .image-container:hover {
